[package]
name = "grrs"
version = "0.1.0"
authors = ["sectorzero <sndshd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
failure = "0.1.6"
rand = "0.7.2"
indicatif = {version = "*", features = ["with_rayon"]} 
rayon = "1.2.1"
num_cpus = "1.11.1"